...

    <!-- Strings related to login/signup -->
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered? Login </string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up </string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signup">Don\'t have an account? Signup </string>
    <string name="btn_create_listing"> Create Listing </string>
    <string name="btn_delete_listing"> Delete Listing </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

...
